--- a/transmart-web/httpd-vhosts.conf
+++ b/transmart-web/httpd-vhosts.conf
@@ -11,7 +11,7 @@
   </LocationMatch>
 
   <Location /transmart>
-    ProxyPass        ajp://127.0.0.1:8009/transmart
-    ProxyPassReverse ajp://127.0.0.1:8009/transmart
+    ProxyPass        ajp://tmapp/transmart
+    ProxyPassReverse ajp://tmapp/transmart
   </Location>
 </VirtualHost>
